tests/snapshots/integration__integration_tests__remove__remove_dirty_working_tree.snap
---
source: tests/integration_tests/finish.rs
info:
  program: wt
  args:
    - finish
  env:
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Git command failed: Working tree has uncommitted changes. Commit or stash them first.
